--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -12,14 +12,15 @@
         android:orientation="vertical"
         android:gravity="center"
         android:padding="16dp"
+        android:background="@color/colorBackground"
         tools:context=".InicioFragment">
 
         <ImageView
             android:id="@+id/inicioImage"
             android:layout_width="0dp"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:scaleType="fitCenter"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="86dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,12 +30,15 @@
             android:id="@+id/label_welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/welcome_message"
-            android:textSize="18sp"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/inicioImage"
+            android:fontFamily="@font/roboto"
+            android:text="@string/welcome_message"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimaryText"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/inicioImage" />
 
 
         <TextView
@@ -44,8 +48,22 @@
             android:layout_marginTop="24dp"
             android:gravity="center"
             android:text="@string/app_description"
-            android:textSize="12sp"
+            android:textSize="14sp"
+            android:textColor="@color/colorSecondaryText"
             app:layout_constraintTop_toBottomOf="@id/label_welcome"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:text="@string/app_description2"
+            android:textSize="14sp"
+            android:textColor="@color/colorSecondaryText"
+            app:layout_constraintTop_toBottomOf="@id/textView1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -55,6 +73,8 @@
             android:layout_height="wrap_content"
             android:text="@string/start_button"
             android:layout_marginBottom="32dp"
+            android:backgroundTint="@color/colorSecondary"
+            android:textColor="@color/colorBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
