--- a/app/src/main/res/layout/sentence_item.xml
+++ b/app/src/main/res/layout/sentence_item.xml
@@ -2,15 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/text_sentence"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="0dp"
+        android:fontFamily="@font/roboto"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="14sp"
+        android:gravity="center_vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Mi lindo dia" />
+
+    <TextView
+        android:id="@+id/text_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="12sp"
+        android:fontFamily="@font/roboto"
+        android:gravity="center_vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_sentence"
+        tools:text="yyyy-MM-dd'T'HH:mm:ss'Z'" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
