add 100 positive phrases and, add provider phrases

--- a/app/src/main/res/layout/fragment_positive_phrase.xml
+++ b/app/src/main/res/layout/fragment_positive_phrase.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".ui.screens.PositivePhraseFragment">
 
     <LinearLayout
@@ -17,11 +18,12 @@
             android:layout_height="200dp"
             android:layout_marginTop="16dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/congrats_confetti"/>
+            android:src="@drawable/congrats"/>
 
 
         <!-- Frase positiva -->
         <TextView
+            android:id="@+id/text_positive_phrase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gift"
