--- a/app/src/main/res/layout/fragment_positive_phrase.xml
+++ b/app/src/main/res/layout/fragment_positive_phrase.xml
@@ -1,61 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBackground"
     tools:context=".ui.screens.PositivePhraseFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <pl.droidsonroids.gif.GifImageView
             android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginTop="52dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/congrats"/>
+            android:src="@drawable/congrats"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/text_positive_phrase"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="La vida está llena de oportunidades, solo tienes que estar abierto a ellas."
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/roboto"
             android:gravity="center"
             android:textColor="@color/colorPrimaryText"
-            android:fontFamily="@font/roboto"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/web_view"/>
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/web_view"
+            tools:text="La vida está llena de oportunidades, solo tienes que estar abierto a ellas." />
 
         <TextView
             android:id="@+id/text_secondary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/text_final"
-            android:textSize="12sp"
-            android:gravity="center"
-            android:textColor="@color/colorSecondaryText"
-            android:fontFamily="@font/roboto"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/text_positive_phrase"/>
+            android:fontFamily="@font/roboto"
+            android:gravity="center"
+            android:text="@string/text_final"
+            android:textColor="@color/colorSecondaryText"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@id/text_positive_phrase" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <Button
+            android:id="@+id/btnShare"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Compartir"
+            app:layout_constraintBottom_toTopOf="@id/boton_regresar"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/boton_regresar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
             android:backgroundTint="@color/colorSecondary"
             android:text="@string/button_home"
             android:textColor="@color/colorBackground"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="16dp"
-            android:id="@+id/boton_regresar"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
