--- a/app/src/main/res/layout/fragment_new_sentence.xml
+++ b/app/src/main/res/layout/fragment_new_sentence.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.screens.NewSentenceFragment">
+    tools:context="com.jdl.daylijoy.ui.screens.NewSentenceFragment">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
