--- a/app/src/main/res/layout/fragment_positive_phrase.xml
+++ b/app/src/main/res/layout/fragment_positive_phrase.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.screens.PositivePhraseFragment">
+    tools:context="com.jdl.daylijoy.ui.screens.PositivePhraseFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
