--- a/app/src/main/res/layout/fragment_sentences.xml
+++ b/app/src/main/res/layout/fragment_sentences.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.screens.SentencesFragment">
+    tools:context="com.jdl.daylijoy.ui.screens.SentencesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_sentences"
