--- a/app/src/main/res/layout/fragment_new_sentence.xml
+++ b/app/src/main/res/layout/fragment_new_sentence.xml
@@ -16,13 +16,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="4dp"
                 android:backgroundTint="@color/white"
                 android:translationZ="4dp"
                 app:cardCornerRadius="16dp"
@@ -45,7 +47,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Cosa Buena"
+                        android:text="@string/cosa_buena"
                         android:textColor="@color/colorSecondaryText"
                         app:layout_constraintBottom_toBottomOf="@id/image_1"
                         app:layout_constraintStart_toEndOf="@id/image_1"
@@ -79,7 +81,8 @@
                 android:id="@+id/card_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="4dp"
                 android:backgroundTint="@color/white"
                 android:translationZ="4dp"
                 app:cardCornerRadius="16dp"
@@ -102,7 +105,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Cosa Buena"
+                        android:text="@string/cosa_buena"
                         android:textColor="@color/colorSecondaryText"
                         app:layout_constraintBottom_toBottomOf="@id/image_2"
                         app:layout_constraintStart_toEndOf="@id/image_2"
@@ -136,7 +139,8 @@
                 android:id="@+id/card_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="4dp"
                 android:backgroundTint="@color/white"
                 android:translationZ="4dp"
                 app:cardCornerRadius="16dp"
@@ -159,7 +163,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Cosa Buena"
+                        android:text="@string/cosa_buena"
                         android:textColor="@color/colorSecondaryText"
                         app:layout_constraintBottom_toBottomOf="@id/image_3"
                         app:layout_constraintStart_toEndOf="@id/image_3"
@@ -193,7 +197,8 @@
                 android:id="@+id/card_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="4dp"
                 android:backgroundTint="@color/white"
                 android:translationZ="4dp"
                 app:cardCornerRadius="16dp"
@@ -216,7 +221,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Cosa Buena"
+                        android:text="@string/cosa_buena"
                         android:textColor="@color/colorSecondaryText"
                         app:layout_constraintBottom_toBottomOf="@id/image_4"
                         app:layout_constraintStart_toEndOf="@id/image_4"
@@ -250,7 +255,8 @@
                 android:id="@+id/card_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="4dp"
                 android:backgroundTint="@color/white"
                 android:translationZ="4dp"
                 app:cardCornerRadius="16dp"
@@ -273,7 +279,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:text="Cosa Buena"
+                        android:text="@string/cosa_buena"
                         android:textColor="@color/colorSecondaryText"
                         app:layout_constraintBottom_toBottomOf="@id/image_5"
                         app:layout_constraintStart_toEndOf="@id/image_5"
