--- a/app/src/main/res/layout/fragment_sentences.xml
+++ b/app/src/main/res/layout/fragment_sentences.xml
@@ -11,7 +11,7 @@
         android:id="@+id/recyclerview_sentences"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
+        android:padding="8dp"
         tools:itemCount="4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
+        android:backgroundTint="@color/colorPrimary"
         android:contentDescription="@string/add_sentence"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
